--- a/doc/ContractSemantics.tex
+++ b/doc/ContractSemantics.tex
@@ -46,7 +46,7 @@
 \lstset{style=smlstyle,keepspaces=true,breaklines=false}\newcommand{\cd}[1]{\lstinline$#1$}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\renewcommand{\emph}[1]{\textcolor{structure!60}{#1}}
+\renewcommand{\emph}[1]{\textcolor{structure!90}{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -78,7 +78,6 @@ todo:
 
  - examples (vanilla option, barrier touch)                                     (mael)
  - complete complex equivalences with advancement and notion of certainty       (jost)
- - move causality to appendix and include example of non-causal contract        (jost)
  - utility examples from interpreter (cash-flows for an instrument)             (mael)
  - complete semantics slide                                                     (jost)
 
@@ -231,76 +230,38 @@ Contracts can be analyzed in a variety of ways...
 
 \newcommand{\crule}[3]{\frac{#2}{#3}\ \mbox{\scriptsize \it #1}}
 
-\begin{frame}[t]
+\begin{frame}[fragile,t]
     \frametitle{Contract Causality}
 
 \emph{Causal Contracts, intention:}
-{\footnotesize
+{%\footnotesize
 \begin{quote}
  A \emph{causal contract} is a contract with the property that during all
    possible executions of the contract, a cash flow cannot depend on a
    future fixing (of an observable).
-\end{quote}
-Goal: Establish static bound for many contracts.
-}
-\smallskip
-\hrule
+\end{quote}}
+
+\emph{Example of a non-causal contract:}
+
+\begin{mlcode}
+iff( obs("CarlsbergDKR",2) !>! R 50.0,
+                              transfOne(EUR, me, you), zero)
+\end{mlcode}
+{\footnotesize
+\begin{quote}
+  If \emph{the day after tomorrow}, 
+           the Carlsberg stock is worth more than 50~kr.,
+           I give you one EUR \emph{today}.
+\end{quote}}
 
 \medskip
-\emph{\textbf{Expression Causality}}
+\hrule
+\medskip
 
-\emph{$b$-causality} $ b \vdash e$ for \emph{expressions}:
-{\scriptsize $ (b \in \mathbb{Z}_0^+, \ e \in \ttt{expr0})$}
+\emph{Goal}: Establish static bound and check for many contracts.
 
-\begin{columns}
-\column{0.3\textwidth}
-%\jbcomment{b non-negative to use 0 as lowest value: How about $\forall b\in\mathbb{Z}: b\vdash Literal$}
-\begin{align*}
-\crule{(Lit)}{e \mbox{ is a literal}}{0 \vdash e}&\\[1ex]
- \crule{(Obs)}{}{max(0,i) \vdash \ttt{obs}(s,i)}&\\
-\end{align*}
-
-\column{0.3\textwidth}
-\begin{align*}
-&\crule{(BinOp)}{b_1 \vdash e_1\ \ b_2 \vdash e_2 }{max(b_1,b_2) \vdash e_1 \otimes e_2}\\[1ex]
-&\crule{(UnOp)}{b \vdash e}{b \vdash \ominus e}\\
-\end{align*}
-\end{columns}
-Intuitive: smallest $i$ such that no observable is observed \emph{after more than $i$ days}.
-
-\end{frame}
-
-\begin{frame}[t]
-    \frametitle{Contract Causality (2)}
-
-\emph{$b$-causality} $ b \vdash c$ for contracts:
-{\scriptsize $ (b \in \mathbb{Z}_0^+, \ c \in \ttt{contr})$}
-
-\begin{columns}
-\column{0.3\textwidth}
-\begin{align*}
-\crule{(Zero)}{}{\infty \vdash \zero}&\\
-\crule{(TO)}{}{0 \vdash \transfOne(C,p_1,p_2)}&\\
-\crule{(TL)}{b \vdash c}{b + d \vdash \transl(d,c)}&\\
-\end{align*}
-
-\column{0.3\textwidth}
-\begin{align*}
-&\\
-&\crule{(Sc)}{b_1 \vdash e\ \ \ b_2\vdash c\ \ \ b_1 \leq b_2 }{b_2 \vdash \scale(e,c)}\\
-&\crule{(Both)}{b_1 \vdash c_1\ \ \ b_2 \vdash c_2}{min(b_1,b_2) \vdash \both(c_1,c_2)}\\
-\end{align*}
-\end{columns}
-$$ 
-\crule{(CW)}{0\vdash e\ \ \ b_1 \vdash c_1\ \ \ b_2 \vdash c_2}{min(b_1,b_2) \vdash \checkWithin(e,d,c_1,c_2)}
-$$
-
-\jbcomment{I would expect some different rules: (Zero) should use 0, not $\infty$,
-(TL) should use $b-d$ because c is translated by $d$ forward, (Both) and (CW) would use $max$.
-Maybe I misunderstood the directions here?
-
-}
-
+\vfill
+{\scriptsize Expression causality, contract causality: see appendix}
 \end{frame}
 
 \newcommand{\sem}[1]{[\![#1]\!]}
@@ -362,6 +323,74 @@ d > 0\ \wedge\ !\mathcal{E}\sem{b}e:\\
 }
 \end{align*}
 }
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Expression Causality}
+
+\emph{$b$-causality} $ b \vdash e$ for \emph{expressions}:
+{\scriptsize $ (b \in \mathbb{Z}_0^+, \ e \in \ttt{expr0})$}
+
+\begin{columns}
+\column{0.1\textwidth}
+\emph{Axioms:}
+\column{0.35\textwidth}
+$$\crule{(Obs)}{}{max(0,i) \vdash \ttt{obs}(s,i)}$$
+%\jbcomment{b non-negative to use 0 as lowest value: How about $\forall b\in\mathbb{Z}: b\vdash Literal$}
+\column{0.2\textwidth}
+$$\crule{(Lit)}{e \mbox{ is a literal}}{0 \vdash e}$$
+\end{columns}
+
+
+\begin{columns}
+\column{0.1\textwidth}
+\emph{Propagation:}
+\column{0.35\textwidth}
+$$\crule{(BinOp)}{b_1 \vdash e_1\ \ b_2 \vdash e_2 }{max(b_1,b_2) \vdash e_1 \otimes e_2}$$
+
+\column{0.2\textwidth}
+$$\crule{(UnOp)}{b \vdash e}{b \vdash \ominus e}$$
+\end{columns}
+
+\medskip
+\hrule
+\medskip
+
+\emph{Intuition:} $i \vdash e$ indicates the smallest $i$ such that no observable in $e$ is observed \emph{after more than $i$ days}.
+
+\end{frame}
+
+\begin{frame}[t]
+    \frametitle{Contract Causality}
+
+\emph{$d$-causality} $ d \vdash c$ for contracts:
+{\scriptsize $ (d \in \mathbb{Z}_0^+, \ c \in \ttt{contr})$}
+
+\begin{columns}
+\column{0.3\textwidth}
+\begin{align*}
+\crule{(Zero)}{}{\infty \vdash \zero}&\\[1ex]
+\crule{(TO)}{}{0 \vdash \transfOne(C,p_1,p_2)}&\\[1ex]
+\crule{(TL)}{b \vdash c}{b + d \vdash \transl(d,c)}&\\[1ex]
+\end{align*}
+
+\column{0.3\textwidth}
+\begin{align*}
+&\\[1ex]
+&\crule{(Sc)}{b_1 \vdash e\ \ \ b_2\vdash c\ \ \ b_1 \leq b_2 }{b_2 \vdash \scale(e,c)}\\[1ex]
+&\crule{(Both)}{b_1 \vdash c_1\ \ \ b_2 \vdash c_2}{min(b_1,b_2) \vdash \both(c_1,c_2)}%\\[1ex]
+\end{align*}
+\end{columns}
+$$ 
+\crule{(CW)}{0\vdash e\ \ \ b_1 \vdash c_1\ \ \ b_2 \vdash c_2}{min(b_1,d+b_2) \vdash \checkWithin(e,d,c_1,c_2)}
+$$
+
+\medskip
+\hrule
+\medskip
+
+\emph{Intuition:} $i \vdash c$ means c is causal (\textit{SC} rule) and there are no transfers before $i$ days have passed (\textit{TL} rule and using \textit{min}).
 
 \end{frame}
 
