--- a/doc/ContractSemantics.tex
+++ b/doc/ContractSemantics.tex
@@ -323,7 +323,7 @@ given an environment with the required fixings:
 $$ \mathcal{C} : \ttt{contr} \times \ttt{env} 
           \rightarrow \mathbb{P}(\ttt{flow})^\mathbb{N}$$
 
-$\ttt{flow}$ is a cash flow: \cd{(amount: real, c: currency, from,to: party)}
+\cd{flow} is a cash flow: \cd{(amount: real, c: currency, from,to: party)}
 
 \vfill
 {\scriptsize Full definition of contract semantics: see appendix}
